objects/adapps__OptimizerPlus_Unassigned_Profiles_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Unassigned_Profiles__c</fullName>
        <label>Unassigned Custom Profiles</label>
        <referenceTo>adapps__OptimizerPlus_Unassigned_Profiles__c</referenceTo>
        <relationshipLabel>Unassigned Profiles Items</relationshipLabel>
        <relationshipName>Unassigned_Profiles_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Unassigned Profiles Item</label>
    <nameField>
        <label>Unassigned Profiles Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unassigned Profiles Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>